--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,177 +3,162 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".activity.GameActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="258dp"
+                android:background="@drawable/back_quiz_main"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="258dp"
-                    android:background="@drawable/back_quiz_main"
-                    android:orientation="vertical">
+                    android:layout_height="60dp"
+                    android:gravity="center">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:id="@+id/iv_game_timer"
-                            android:layout_width="38dp"
-                            android:layout_height="25dp"
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="5dp"
-                            android:src="@drawable/ic_timer_clock" />
-
-                        <TextView
-                            android:id="@+id/tv_game_timer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:lineSpacingExtra="10sp"
-                            android:text="60"
-                            android:textColor="#ffffff"
-                            android:textSize="16sp" />
-
-                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/iv_game_timer"
+                        android:layout_width="38dp"
+                        android:layout_height="25dp"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="5dp"
+                        android:src="@drawable/ic_timer_clock" />
 
                     <TextView
-                        android:id="@+id/tv_game_beginCounter"
-                        android:layout_width="match_parent"
-                        android:layout_height="96dp"
-                        android:gravity="center"
-                        android:letterSpacing="-0.03"
-                        android:lineSpacingExtra="22sp"
-                        android:text="디프만"
-                        android:textColor="#ffffff"
-                        android:textSize="33sp"
-                        tools:text="디 프 만" />
+                        android:id="@+id/tv_game_timer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="60"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
+                <TextView
+                    android:id="@+id/tv_game_beginCounter"
+                    android:layout_width="match_parent"
+                    android:layout_height="96dp"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="33sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_game_answer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_game_word1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_word_vacant"
+                        android:gravity="center"
+                        android:text="@string/game_ready1"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="25sp" />
+
+                    <EditText
+                        android:id="@+id/et_game_word1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/back_insert_text"
+                        android:hint="@string/game_input"
+                        android:maxLines="1"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="15dp"
+                        android:singleLine="true"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="29dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_game_word2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_word_vacant"
+                        android:gravity="center"
+                        android:text="@string/game_ready2"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="25sp" />
+
+                    <EditText
+                        android:id="@+id/et_game_word2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/back_insert_text"
+                        android:hint="@string/game_input"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="15dp"
+                        android:singleLine="true"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/ll_game_answer"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="56dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="29dp"
+                    android:layout_marginRight="20dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/tv_game_word3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_word_vacant"
+                        android:gravity="center"
+                        android:text="@string/game_ready3"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="25sp" />
+
+                    <EditText
+                        android:id="@+id/et_game_word3"
                         android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="59dp"
-                        android:layout_marginRight="20dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tv_game_firstword"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/ic_word_vacant"
-                            android:gravity="center"
-                            android:letterSpacing="-0.03"
-                            android:lineSpacingExtra="27sp"
-                            android:textColor="#ff8479"
-                            android:textSize="25sp" />
-
-                        <EditText
-                            android:id="@+id/et_game_first"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/back_insert_text"
-                            android:hint="입력!"
-                            android:lineSpacingExtra="3sp"
-                            android:maxLines="1"
-                            android:paddingStart="10dp"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="29dp"
-                        android:layout_marginRight="20dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tv_game_secondword"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/ic_word_vacant"
-                            android:gravity="center"
-                            android:letterSpacing="-0.03"
-                            android:lineSpacingExtra="27sp"
-                            android:textColor="#ff8479"
-                            android:textSize="25sp" />
-
-                        <EditText
-                            android:id="@+id/et_game_second"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/back_insert_text"
-                            android:hint="입력!"
-                            android:lineSpacingExtra="3sp"
-                            android:paddingStart="10dp"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="56dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="29dp"
-                        android:layout_marginRight="20dp"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tv_game_thirdword"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/ic_word_vacant"
-                            android:gravity="center"
-                            android:letterSpacing="-0.03"
-                            android:lineSpacingExtra="27sp"
-                            android:textColor="#ff8479"
-                            android:textSize="25sp" />
-
-                        <EditText
-                            android:id="@+id/et_game_third"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/back_insert_text"
-                            android:hint="입력!"
-                            android:lineSpacingExtra="3sp"
-                            android:maxLines="1"
-                            android:paddingStart="10dp"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/back_insert_text"
+                        android:hint="@string/game_input"
+                        android:maxLines="1"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="15dp"
+                        android:singleLine="true"
+                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
-        </ScrollView>
-
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <FrameLayout
         android:layout_width="wrap_content"
